# aerial_robot

./: aerial_robot_noetic.rosinstall
.github/workflows/: wf_test.yml
aerial_robot_base/include/aerial_robot_base/: aerial_robot_base.h
aerial_robot_control/: CMakeLists.txt
aerial_robot_control/include/aerial_robot_control/: flight_navigation.h
aerial_robot_control/src/: flight_navigation.cpp
aerial_robot_control/src/control/: fully_actuated_controller.cpp  pose_linear_controller.cpp
aerial_robot_estimation/src/sensor/: mocap.cpp  vo.cpp
aerial_robot_model/: CMakeLists.txt  package.xml
aerial_robot_model/launch/: kdl_test.launch
aerial_robot_model/src/: aerial_robot_model.cpp
aerial_robot_msgs/: CMakeLists.txt
aerial_robot_nerve/motor_test/: README.md
aerial_robot_simulation/: package.xml
aerial_robot_simulation/config/: Simulation.yaml
aerial_robot_simulation/launch/: simulation.launch
quadrotor/: CMakeLists.txt  package.xml
quadrotor/launch/: quadrotor_pid_test.launch
quadrotor/script/: pid_control_with_realsense.py
robots/Twin_Hammer/: CMakeLists.txt  package.xml
robots/aero_mobility/: CMakeLists.txt
robots/assemble_quadrotors/: CMakeLists.txt  dessemble_task.launch  package.xml  setup.py
robots/assemble_quadrotors/config/: AssembleControl.yaml  AssembleMotorInfo_5inch.yaml  AssembleMotorInfo_5inch_6wings.yaml  AssembleRobotModel.yaml  Battery.yaml  FlightControlFullyActuated.yaml  FlightControlUnderActuated_tilt.yaml  FlightControlUnderActuated_tilt_female.yaml  FlightControlUnderActuated_tilt_male.yaml  MotorInfo_5inch.yaml  NavigationConfig.yaml  StateEstimation.yaml  rviz_config_1  rviz_config_2
robots/assemble_quadrotors/include/assemble_quadrotors/: optimal_design.h
robots/assemble_quadrotors/include/assemble_quadrotors/control/: assemble_controller.h
robots/assemble_quadrotors/include/assemble_quadrotors/model/: assemble_robot_model.h  fixed_aerial_robot_model.h
robots/assemble_quadrotors/include/assemble_quadrotors/navigation/: assemble_flight_navigation.h
robots/assemble_quadrotors/include/assemble_quadrotors/sensor/: mocap.h
robots/assemble_quadrotors/launch/: assemble_joy.launch  bringup.launch  circle.launch  dessemble_task.launch  optimal_thrust.launch  spawn_model.launch
robots/assemble_quadrotors/launch/includes/: assemble_robot_model.launch  docking_mechanism.launch  sensors.launch.xml
robots/assemble_quadrotors/launch/includes/external_module/: assemble_mocap.launch
robots/assemble_quadrotors/plugins/: control_plugins.xml  navigation_plugins.xml  robot_model_plugins.xml  sensor_plugins.xml
robots/assemble_quadrotors/scripts/: assemble_demo.py  assemble_demo_mag.py  assemble_joy.py  assemble_joy2.py  assemble_keyboard_command.py  circle_assemble.py  circle_orbit_flight.py  dessemble_demo.py  male_keyboard_command.py  pos_demo.py  pos_initialize.py  switching_demo.py
robots/assemble_quadrotors/scripts/assemble_quadrotors/: assembly.py  disassembly.py  kondo.py
robots/assemble_quadrotors/scripts/demos/: assembly_demo.py  disassembly_demo.py
robots/assemble_quadrotors/src/: optimal_design.cpp  optimal_thrust.cpp
robots/assemble_quadrotors/src/KXR_Arduino/KXR_servo_pos_control_test/: KXR_servo_pos_control_test.ino
robots/assemble_quadrotors/src/KXR_Arduino/KXR_servo_pos_control_with_softwareSerial/: KXR_servo_pos_control_with_softwareSerial.ino
robots/assemble_quadrotors/src/KXR_Arduino/Magnet_female_control/: Magnet_female_control.ino
robots/assemble_quadrotors/src/KXR_Arduino/Magnet_male_control/: Magnet_male_control.ino
robots/assemble_quadrotors/src/control/: assemble_controller.cpp
robots/assemble_quadrotors/src/model/: assemble_robot_model.cpp
robots/assemble_quadrotors/src/navigation/: assemble_flight_navigation.cpp
robots/assemble_quadrotors/src/sensor/: mocap.cpp
robots/assemble_quadrotors/urdf/: assemble_dual_quadrotors_female.urdf.xacro  assemble_dual_quadrotors_female_mag.gazebo.xacro  assemble_dual_quadrotors_female_mag.urdf.xacro  assemble_dual_quadrotors_male.urdf.xacro  assemble_dual_quadrotors_male_mag.gazebo.xacro  assemble_dual_quadrotors_male_mag.urdf.xacro  assemble_dual_quadrotors_neutral.urdf.xacro  assemble_dual_quadrotors_whole.urdf.xacro  assemble_dual_quadrotors_whole_female.gazebo.xacro  assemble_dual_quadrotors_whole_female.urdf.xacro  assemble_dual_quadrotors_whole_female_mag.gazebo.xacro  assemble_dual_quadrotors_whole_female_mag.urdf.xacro  assemble_dual_quadrotors_whole_male.gazebo.xacro  assemble_dual_quadrotors_whole_male.urdf.xacro  assemble_dual_quadrotors_whole_male_mag.gazebo.xacro  assemble_dual_quadrotors_whole_male_mag.urdf.xacro
robots/assemble_quadrotors/urdf/mesh/: 5inch_propeller.dae
robots/beetle/: CMakeLists.txt  package.xml
robots/ninja/: CMakeLists.txt  package.xml
robots/trady/: CMakeLists.txt  package.xml
robots/trady/urdf/: robot.urdf.xacro
robots/twin_hammer/: CMakeLists.txt  expanded_device.urdf  package.xml
robots/twin_hammer/config/: RvizInit.yaml  rviz_config
robots/twin_hammer/config/control/: FullVectoringControl.yaml  TwinHammerControl.yaml  TwinHammerOptimizer.yaml
robots/twin_hammer/config/model/: FullVectoringRobotModel.yaml  TwinHammerModel.yaml  UnderActuatedRobotModel.yaml
robots/twin_hammer/include/twin_hammer/control/: twin_hammer_controller.h  twin_hammer_optimizer.h
robots/twin_hammer/include/twin_hammer/model/: twin_hammer_model.h
robots/twin_hammer/launch/: bringup.launch
robots/twin_hammer/launch/include/: sensors.launch.xml
robots/twin_hammer/plugins/: control_plugins.xml  robot_model_plugins.xml
robots/twin_hammer/scripts/: keyboard_command.py
robots/twin_hammer/src/control/: twin_hammer_controller.cpp  twin_hammer_controller_backup_before_change_thrust_mapping.cpp  twin_hammer_controller_backup_optimization.cpp  twin_hammer_controller_using_pseudo_inverse.cpp  twin_hammer_optimizer.cpp
robots/twin_hammer/src/model/: twin_hammer_model.cpp
robots/twin_hammer/urdf/: device.gazebo.xacro  device.urdf.xacro
robots/twin_hammer/urdf/mesh/: main_body.dae
(+142 files in other folders)
