<?xml version="1.0"?>
<package>
  <name>assemble_quadrotors</name>
  <version>1.3.0</version>
  <description>The basic packages for assemble quadrotors</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/JSKAerialRobot/aerial_robot</url>
  <author email="chou@jsk.imi.i.u-tokyo.ac.jp">Bakui Chou</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>aerial_robot_control</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>
  <build_depend>aerial_robot_estimation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>aerial_robot_control</run_depend>
  <run_depend>aerial_robot_model</run_depend>
  <run_depend>aerial_robot_msgs</run_depend>
  <run_depend>aerial_robot_estimation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <aerial_robot_estimation plugin="${prefix}/plugins/sensor_plugins.xml" />
    <aerial_robot_model plugin="${prefix}/plugins/robot_model_plugins.xml" />
    <aerial_robot_control plugin="${prefix}/plugins/navigation_plugins.xml" />
    <aerial_robot_control plugin="${prefix}/plugins/control_plugins.xml" />
  </export>


</package>
