<?xml version="1.0"?>
<package>
  <name>twin_hammer</name>
  <version>1.3.2</version>
  <description>The Twin_Hammer package</description>

  <maintainer email="kaneko@hnl.t.u-tokyo.ac.jp">Kotaro Kaneko</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/jsk-ros-pkg/jsk_aerial_robot</url>
  <author email="kaneko@hnl.t.u-tokyo.ac.jp">Kotaro Kaneko</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aerial_robot_control</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>aerial_robot_msgs</build_depend>
  <build_depend>gimbalrotor</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  
  <run_depend>aerial_robot_control</run_depend>
  <run_depend>aerial_robot_model</run_depend>
  <run_depend>aerial_robot_msgs</run_depend>
  <run_depend>aerial_robot_estimation</run_depend>
  <run_depend>aerial_robot_simulation</run_depend>
  <run_depend>aerial_robot_base</run_depend>
  <run_depend>gimbalrotor</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <aerial_robot_model plugin="${prefix}/plugins/robot_model_plugins.xml" />
    <aerial_robot_control plugin="${prefix}/plugins/control_plugins.xml" />
  </export>

</package>
